fixed layout issue & media query mobile accomo cards

--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,16 @@ main {
 
 /****** Accommodation And Popular ***********/
 .accommodation-and-popular {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    gap: 40px;
+}
+
+@media (width < 1024px) {
+.accommodation-and-popular {
+    grid-template-columns: 1fr;
+
+}
 }
 
 .accommodation-and-popular section {
@@ -70,15 +78,22 @@ main {
 }
 
 /****** Accommodation ***********/
-.accommodation {
+/* .accommodation {
     width: 65%;
-}
+} */
+
 .card-wrap {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 30px;
     justify-self: center;
 
+}
+
+@media (width < 700px) {
+    .card-wrap {
+    grid-template-columns: 1fr;
+}
 }
 
 .accommodation h2.accom-main-title {
@@ -91,23 +106,46 @@ main {
     border-radius: 20px;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-    width: 250px;
-    height: 200px;
+    /* width: 250px;
+    height: 200px; */
 
 }
 
 .accom-card img {
-    width: 230px;
-    height: 120px;
-    align-self: center;
+    /* width: 245px;
+    height: 120px; */
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
-.accom-txt h3, p {
+
+.accom-txt p {
+    margin: 0;
+}
+
+h3.accom-title {
+    background-color: #e4c4a4;
     margin: 0;
 }
 
 /****** Popular ***********/
-.popular {
+/* .popular {
     width: 32%;
+} */
+
+.popular-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px;
+}
+
+@media (width < 1024px) {
+    .popular-cards {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 .popular-title {
@@ -118,13 +156,14 @@ main {
 
 .popular-cards .card {
     display: flex;
-    margin-top: 33px;
+    /* margin-top: 33px; */
 }
 
 .popular-cards img {
     width: 33%;
     height: 136px;
-    border-radius: 20px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 .popular-cards .card-content {
